# scafl

./: .gitignore  AppImageBuilder-apt.yml  AppImageBuilder-pacman.yml  AppImageBuilder.yml  LICENSE  MANIFEST.in  README.md  run-scafl-flatpak.sh  setup.cfg
.github/workflows/: python-app.yml  scafl-dev.yml  scafl-release.yml  scafl.yml
src/: application.py  main.py  settings.py  startup.py
src/gui/: scafl_window.py  steam_login_webview.py
src/scafl/: __init__.py  __main__.py  application.py  blacklist.py  main.py  settings.py  startup.py  steam_idle_proc.py  steam_user_badges.py  utils.py
src/scafl/gui/: about_dialog.py  scafl_window.py  steam_login_webview.py
src/scafl/gui/components/: badge_box.py
utils/: create-icons.sh
