[metadata]
name = scafl
version = attr: scafl.__version__
author = Dragon Of War
author_email = therealdragonofwar@gmail.com
description = A Steam game idler for trading card drops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DragonOfWar/scafl
project_urls =
    Bug Tracker = https://github.com/DragonOfWar/scafl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4==4.10.0
    requests==2.26.0
    pycairo==1.20.1

[options.packages.find]
where = src