[metadata]
name = scafl
version = attr: scafl.__version__
author = Dwahgon
author_email = therealdragonofwar@gmail.com
description = A Steam game idler to farm Steam trading cards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DragonOfWar/scafl
project_urls =
    Bug Tracker = https://github.com/DragonOfWar/scafl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4==4.10.0
    requests==2.26.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scafl = scafl:main